fixed bug where button too wide

--- a/css/download.css
+++ b/css/download.css
@@ -28,7 +28,7 @@
   }
 
   .btn {
-    font-size: 11px !important;
+    font-size: 0.9em !important;
   }
 
   #download-list-button {
@@ -73,6 +73,10 @@
     font-size: 16px;
     font-weight: bold;
   }
+
+  .btn {
+    font-size: 0.9em !important;
+  }
 }
 
 label,
@@ -81,7 +85,7 @@ label,
 legend,
 .btn {
   font-family: Arial, sans-serif;
-  font-size: 12px;
+  font-size: 1em;
 }
 
 #location-search-container {
